replaced tabs in all files with 4 spaces after noticing that the setting was not installed
